# hyparse

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  README.md  data.csv  hytek_parser.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  working.py
.github/: PRE_COMMIT_GUIDE.md  PRE_COMMIT_SETUP_COMPLETE.md  SETUP_GUIDE.md  TEST_FIXES_SUMMARY.md
.github/workflows/: README.md  ci.yml  publish.yml
data/: 2024 Tennessee Invitational_individual_results.csv  2024 Tennessee Invitational_relay_results.csv  Meet Results-2010 SE Tennessee Lady Volunteers - Arkansas-16Oct2010-001.hy3  Meet Results-2023 Tennessee Invitational-15Nov2023-001.hy3
data/hy3/: Meet Results-2019 NCAA DI Women-s Swimming - Diving Champs-20Mar2019-007.hy3  Meet Results-2019 SEC Swimming - Diving Championships-19Feb2019-Tennessee  University of  Knox-SE-001.hy3  Meet Results-2024 Tennessee Invitational-19Nov2024-001.hy3  Meet Results-2024 Tennessee vs LSU-27Jan2024-001.hy3  Meet Results-2025 NCAA DI Women-s Swimming - Diving-19Mar2025-001.hy3  Meet Results-2025 NCAA Division I Men-s Swimming - Diving-26Mar2025-001.hy3  Meet Results-CSCAA Dual Meet Challenge Meet 2- 2 vs 3-21Nov2025-001.hy3
hyparse/: __init__.py  exceptions.py  utils.py
hyparse/objects/: __init__.py  athlete.py  individual_entry.py  individual_result.py  meet_info.py  relay_result.py  team.py
hyparse/parser/: __init__.py  hy3_file.py  line_specs.py  validator.py
hyparse/transformers/: __init__.py  dataframe_transformer.py
tests/: __init__.py  conftest.py
(+7 files in other folders)
